Archive2/5d/cdd7d46d61ff31/output
main.cpp: In function 'int main()':
main.cpp:13:28: error: no match for 'operator%' (operand types are 'boost::rational<int>' and 'int')
     rational<> e = (b + a) % 938;
                            ^
main.cpp:14:23: error: 'endl' was not declared in this scope
     std::cout << e << endl;
                       ^
main.cpp:14:23: note: suggested alternative:
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from main.cpp:1:
/usr/include/c++/4.8/ostream:564:5: note:   'std::endl'
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
